--- a/getstart1.ipynb
+++ b/getstart1.ipynb
@@ -1,30 +1,203 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
+    "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300,400' rel='stylesheet' type='text/css'>\n",
+       "<style>\n",
+       "   @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
+       "    }\n",
+       "    /* custom code settings */\n",
+       "    .cm-keyword {\n",
+       "        color: #A81D1E !important;\n",
+       "        font-weight: bold;\n",
+       "    }\n",
+       "    .cm-string {\n",
+       "        color: #A81D1E !important;\n",
+       "        font-style: italic;       \n",
+       "    }\n",
+       "    .cm-comment {\n",
+       "        color: #434343 !important;\n",
+       "        font-style: italic;       \n",
+       "    }\n",
+       "    .cm-variable, .cm-number {\n",
+       "        color: #0C3762 !important;\n",
+       "    }\n",
+       "    .cm-def {\n",
+       "        color: #0C3762 !important;\n",
+       "        font-weight: bold;\n",
+       "    }\n",
+       "    .cm-builtin, .cm-operator {\n",
+       "        color: #A81D1E !important;\n",
+       "        font-weight: bold;\n",
+       "    }\n",
+       "    .rendered_html a {\n",
+       "        color: #0C3762 !important; /* Change this to your preferred color */\n",
+       "        font-weight: bold;\n",
+       "        text-decoration: underline; /* Optional: keeps underline */\n",
+       "    }\n",
+       "    .rendered_html a:hover {\n",
+       "        font-weight: bold;\n",
+       "        color: #0C3762 !important; /* Change color when hovering over links */\n",
+       "    }  \n",
+       "    div.cell{\n",
+       "        width:90%;\n",
+       "        margin-left:auto;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "    div.cell {\n",
+       "        width: 90%;\n",
+       "        margin-left: auto;\n",
+       "        margin-right: auto;\n",
+       "    }\n",
+       "\n",
+       "    div.cell + div.cell.code_cell {\n",
+       "        margin-bottom: 50px; /* add some space between cells */\n",
+       "    }\n",
+       "    h1 {\n",
+       "        font-family: 'Roboto Condensed', sans-serif;\n",
+       "        color: #0C3762;\n",
+       "    }\n",
+       "    h2 {\n",
+       "        font-family: 'Roboto', sans-serif;\n",
+       "        font-weight: 500 !important;\n",
+       "        font-size: 1.5em !important;\n",
+       "        color: #0C3762;\n",
+       "    }\n",
+       "    h3{\n",
+       "\t\tfont-family: 'Roboto', sans-serif;\n",
+       "        margin-top:12px;\n",
+       "        margin-bottom: 3px;\n",
+       "        color: #0C3762;\n",
+       "       }\n",
+       "\th4{\n",
+       "\t\tfont-family: 'Roboto', sans-serif;\n",
+       "        color: #0C3762;\n",
+       "       }\n",
+       "    h5 {\n",
+       "        font-family: 'Roboto Condensed', sans-serif;\n",
+       "        color: #0C3762;\n",
+       "    }\t   \n",
+       "    div.text_cell_render{\n",
+       "        font-family: 'Roboto',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "        line-height: 135%;\n",
+       "        font-size: 110%;\n",
+       "        width:100%;\n",
+       "    }\n",
+       "    div.cell.selected:before, div.cell.selected.jupyter-soft-selected:before {\n",
+       "        background: #0C3762;\n",
+       "        width: 20px;\n",
+       "    }\n",
+       "    /* Add logo next to the bar */\n",
+       "    div.cell.selected:after, \n",
+       "    div.cell.selected.jupyter-soft-selected:after {\n",
+       "        content: '';\n",
+       "        position: absolute;\n",
+       "        left: 20px; /* Position next to the bar (20px = bar width) */\n",
+       "        top: 0;\n",
+       "        bottom: 0;\n",
+       "        width: 40px; /* Logo container width */\n",
+       "        background: url('img/Acoular_logo.png') no-repeat center center / contain;\n",
+       "        z-index: 999;\n",
+       "    }    \n",
+       "    div.input_prompt {\n",
+       "        color: #0C3762;\n",
+       "    }\n",
+       "\n",
+       "    div.output_prompt {\n",
+       "        color: #A81D1E;\n",
+       "    }\n",
+       "    div.input_area {\n",
+       "        background-color: #f1f1f1 !important; \n",
+       "    }    \n",
+       "    div.prompt {\n",
+       "        min-width: 18ex;\n",
+       "    }\n",
+       "    .text_cell_render h1, .text_cell_render h2 {\n",
+       "        font-weight: 200;\n",
+       "        font-size: 50pt;\n",
+       "\t\tline-height: 100%;\n",
+       "        color:#0C3762;\n",
+       "        margin-bottom: 0.5em;\n",
+       "        margin-top: 0.5em;\n",
+       "        display: block;\n",
+       "    }\t\n",
+       "    .text_cell_render h5 {\n",
+       "        font-weight: 300;\n",
+       "        font-size: 16pt;\n",
+       "        color: #0C3762;\n",
+       "        font-style: italic;\n",
+       "        margin-bottom: .5em;\n",
+       "        margin-top: 0.5em;\n",
+       "        display: block;\n",
+       "    }\n",
+       "    .warning{\n",
+       "        color: rgb( 240, 20, 20 );\n",
+       "    }\n",
+       "\n",
+       "</style>\n",
+       "<script>\n",
+       "    MathJax.Hub.Config({\n",
+       "                TeX: {\n",
+       "                    extensions: [\"AMSmath.js\"],\n",
+       "                    equationNumbers: { autoNumber: \"AMS\" }\n",
+       "                },\n",
+       "                tex2jax: {\n",
+       "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+       "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+       "                },\n",
+       "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+       "                \"HTML-CSS\": {\n",
+       "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+       "                }\n",
+       "        });\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "---\n",
-    "title: \"Getting started with Acoular - Part 1\"\n",
-    "subtitle: \"How to use Acoular - simple example with 64 microphone array and three sources, beamforming in frequency domain, first steps\"\n",
-    "author: \"Ennes Sarradj\"\n",
-    "date: \"2021-04-01\"\n",
-    "categories:\n",
-    "    - getting started\n",
-    "    - frequency domain\n",
-    "image: thumb_getstart.png\n",
-    "---"
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"./custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction\n",
+    "<img src=\"img/DAGA_logo.png\" alt=\"DAGA Logo\" style=\"width:160px; position:absolute; top:20px; right:0px;\">\n",
+    "<img src=\"img/TU-lang.png\" alt=\"TU Logo\" style=\"width:230px; position:absolute; top:0px; right:180px;\">\n",
+    "\n",
+    "<h1 style=\"margin-top: 180px; margin-bottom: 50px; color: #A81D1E;\">Getting Started with Acoular</h1>\n",
+    "<h3 style=\"margin-top: 50px; margin-bottom: 100px; color: #434343;\">Art J. R. Pelling, Mikolaj Czuchaj, Gert Herold, Adam Kujawski, Oliver Lylloff, Ennes Sarradj</h2>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
     "\n",
     "This is the first in a series of three blog posts about the basic use of Acoular. It explains some fundamental concepts and walks through a simple example.\n",
     "\n",
@@ -36,8 +209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import acoular"
@@ -47,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Microphone data\n",
+    "## Microphone data\n",
     "\n",
     "In this example, we want to analyze time histories from 64 microphones stored in the file \"three_sources.h5\". The file contains data from a measurement (actually a simulated measurement in this special case) of scene with three different sound sources. [Here](https://www.acoular.org/auto_examples/introductory_examples/example_three_sources.html) you can see how to generate \"three_sources.h5\" file.\n",
     "\n",
@@ -56,11 +231,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_307195/3718984609.py:1: DeprecationWarning: Deprecated use of 'name' trait. Please use the 'file' trait instead.\n",
+      "  ts = acoular.TimeSamples( name=\"three_sources.h5\" )\n"
+     ]
+    },
+    {
+     "ename": "TraitError",
+     "evalue": "The 'file' trait of a TimeSamples instance must be a string or os.PathLike object referring to an existing file, but a value of 'three_sources.h5' <class 'str'> was specified.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTraitError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ts \u001b[38;5;241m=\u001b[39m \u001b[43macoular\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTimeSamples\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mthree_sources.h5\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/micromamba/envs/das_daga/lib/python3.13/site-packages/acoular/deprecation.py:52\u001b[0m, in \u001b[0;36mdeprecated_alias.<locals>.decorator.<locals>._alias_accessor_factory.<locals>.setter\u001b[0;34m(cls, value)\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21msetter\u001b[39m(\u001b[38;5;28mcls\u001b[39m, value):\n\u001b[1;32m     51\u001b[0m     warn(msg, \u001b[38;5;167;01mDeprecationWarning\u001b[39;00m, stacklevel\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m---> 52\u001b[0m     \u001b[38;5;28;43msetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/micromamba/envs/das_daga/lib/python3.13/site-packages/traits/trait_types.py:1439\u001b[0m, in \u001b[0;36mBaseFile.validate\u001b[0;34m(self, object, name, value)\u001b[0m\n\u001b[1;32m   1436\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m isfile(value):\n\u001b[1;32m   1437\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m validated_value\n\u001b[0;32m-> 1439\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mobject\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/micromamba/envs/das_daga/lib/python3.13/site-packages/traits/base_trait_handler.py:74\u001b[0m, in \u001b[0;36mBaseTraitHandler.error\u001b[0;34m(self, object, name, value)\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21merror\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28mobject\u001b[39m, name, value):\n\u001b[1;32m     58\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Raises a TraitError exception.\u001b[39;00m\n\u001b[1;32m     59\u001b[0m \n\u001b[1;32m     60\u001b[0m \u001b[38;5;124;03m    This method is called by the validate() method when an assigned value\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;124;03m        The proposed new value for the attribute.\u001b[39;00m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 74\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m TraitError(\n\u001b[1;32m     75\u001b[0m         \u001b[38;5;28mobject\u001b[39m, name, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfull_info(\u001b[38;5;28mobject\u001b[39m, name, value), value\n\u001b[1;32m     76\u001b[0m     )\n",
+      "\u001b[0;31mTraitError\u001b[0m: The 'file' trait of a TimeSamples instance must be a string or os.PathLike object referring to an existing file, but a value of 'three_sources.h5' <class 'str'> was specified."
+     ]
+    }
+   ],
    "source": [
-    "ts = acoular.TimeSamples( name=\"three_sources.h5\" )"
+    "ts = acoular.TimeSamples( name=\"three_sources.h5\" )\n",
+    "\n"
    ]
   },
   {
@@ -74,20 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<acoular.sources.TimeSamples at 0x7ff0b3e48710>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ts"
    ]
@@ -2380,7 +2568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
