update pictures and css

--- a/00_Acoular_Accessible_Reproducible.ipynb
+++ b/00_Acoular_Accessible_Reproducible.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -18,6 +18,9 @@
        "   @font-face {\n",
        "        font-family: \"Computer Modern\";\n",
        "        src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
+       "    }\n",
+       "    body {\n",
+       "        font-size: 100%;\n",
        "    }\n",
        "    /* custom code settings */\n",
        "    .cm-keyword {\n",
@@ -92,8 +95,8 @@
        "    }\t   \n",
        "    div.text_cell_render{\n",
        "        font-family: 'Roboto',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
-       "        line-height: 145%;\n",
-       "        font-size: 120%;\n",
+       "        line-height: 135%;\n",
+       "        font-size: 130%;\n",
        "        width:100%;\n",
        "    }\n",
        "    div.CodeMirror{\n",
@@ -172,7 +175,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,9 +282,9 @@
     "\n",
     "## Selected milestones\n",
     "\n",
-    "**2007** start development for array wind tunnel testing with advanced frequency domain algorithms + os-based GUI\n",
+    "**2006** start development for array wind tunnel testing with advanced frequency domain algorithms + OS-based GUI\n",
     "        \n",
-    "**2009** time domain algorithms for moving sources (owl flyover \"testing\")\n",
+    "**2009** time domain algorithms for moving sources (bird flyover \"testing\")\n",
     "        \n",
     "**2010** 3D  mapping (wind tunnel testing)\n",
     "        \n",
@@ -291,16 +294,15 @@
     "\n",
     "**2018** 1st Acoular workshop\n",
     "        \n",
-    "**2019** spectAcoular package for browser-based GUI\n",
+    "**2019** SpectAcoular package for browser-based GUI\n",
     "\n",
-    "**2021** Acoupipe package (deep learning data provision)\n",
+    "**2021** AcouPipe package (deep learning data provision)\n",
     "\n",
     "**2024** grant from German Research Foundation (DFG)\n",
     "    </div>\n",
     "    <div style=\"width: 30%; text-align: right; float: right;\">\n",
-    "        <img src=\"img/pantograph_noise_3d.png\" style=\"object-fit: contain\">\n",
-    "        <br>\n",
     "        <img src=\"img/falco.svg\" style=\"clip-path: inset(100px 0 0 0 round 0);\">\n",
+    "        <img src=\"img/pantograph_noise_3d.png\" style=\"object-fit: contain\">\n",
     "    </div>\n",
     "\n",
     "---"
@@ -355,7 +357,7 @@
     "<div style=\"width: 70%; padding-right: 5%; float: left;\">\n",
     "\n",
     "## Prerequisites\n",
-    "* fully object-oriented, functionality  encapsulated into approx. 100 classes\n",
+    "* fully object-oriented, functionality encapsulated into classes\n",
     "* lean user interface\n",
     "* easily accessible:\n",
     "\t* OS: Windows, Linux, MacOS\n",
