--- a/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
+++ b/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
@@ -195,7 +195,6 @@
     "import acoular as ac\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import sounddevice as sd\n",
     "import os"
    ]
   },
@@ -219,10 +218,10 @@
     "\n",
     "## What we will do\n",
     "\n",
-    "- Learn how to stream and process live audio data from your laptop’s microphone\n",
+    "- Stream and process live audio data from laptop’s microphone\n",
     "- Revisit a simple beamforming example with microphone array data\n",
-    "- Demonstration of an application that brings together all the discussed concepts\n",
-    "- _Bonus:_ Implement a real-time visualization of frequency components using data from your own microphone\n"
+    "- Demonstration of an application that brings together the discussed concepts\n",
+    "- _Bonus:_ Implement a real-time visualization of frequency components\n"
    ]
   },
   {
@@ -238,30 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   0 HDA NVidia: HDMI 0 (hw:0,3), ALSA (0 in, 2 out)\n",
-       "   1 HDA NVidia: HDMI 1 (hw:0,7), ALSA (0 in, 8 out)\n",
-       "   2 HDA NVidia: HDMI 2 (hw:0,8), ALSA (0 in, 8 out)\n",
-       "   3 HDA NVidia: HDMI 3 (hw:0,9), ALSA (0 in, 8 out)\n",
-       "   4 HDA Intel PCH: ALC285 Analog (hw:1,0), ALSA (2 in, 2 out)\n",
-       "   5 HDA Intel PCH: HDMI 0 (hw:1,3), ALSA (0 in, 8 out)\n",
-       "   6 HDA Intel PCH: HDMI 1 (hw:1,7), ALSA (0 in, 8 out)\n",
-       "   7 HDA Intel PCH: HDMI 2 (hw:1,8), ALSA (0 in, 8 out)\n",
-       "   8 hdmi, ALSA (0 in, 2 out)\n",
-       "   9 pulse, ALSA (32 in, 32 out)\n",
-       "* 10 default, ALSA (32 in, 32 out)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sounddevice as sd\n",
     "\n",
@@ -298,17 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sampling frequency:  44100.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dev = ac.SoundDeviceSamplesGenerator(\n",
     "    device = device_number,\n",
@@ -354,17 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'nanoSHARC micArray16 UAC2.0: USB Audio (hw:3,0)', 'index': 5, 'hostapi': 0, 'max_input_channels': 16, 'max_output_channels': 0, 'default_low_input_latency': 0.008684807256235827, 'default_low_output_latency': -1.0, 'default_high_input_latency': 0.034829931972789115, 'default_high_output_latency': -1.0, 'default_samplerate': 44100.0} 44100.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "recording_time = 2 # seconds \n",
     "dev.num_samples = int(recording_time * dev.sample_freq)\n",
@@ -448,17 +410,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'nanoSHARC micArray16 UAC2.0: USB Audio (hw:3,0)', 'index': 5, 'hostapi': 0, 'max_input_channels': 16, 'max_output_channels': 0, 'default_low_input_latency': 0.008684807256235827, 'default_low_output_latency': -1.0, 'default_high_input_latency': 0.034829931972789115, 'default_high_output_latency': -1.0, 'default_samplerate': 44100.0} 44100.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hdf5.save()"
    ]
@@ -475,17 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of channels:  1 ; Number of samples:  88200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ts = ac.TimeSamples(file='sounddevice.h5')\n",
     "\n",
@@ -515,17 +461,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of channels:  16 ; Number of samples:  176400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "time_data = ac.MaskedTimeSamples(file='img/multichannel_signal.h5')\n",
     "\n",
@@ -704,7 +642,7 @@
     "ax.set_ylim([0, im_h])\n",
     "\n",
     "ax.axis('off')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -854,41 +792,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7173e9bb3807475f85cf78f90874037c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FigureWidget({\n",
-       "    'data': [{'marker': {'color': '#0C3762'},\n",
-       "              'type': 'bar',\n",
-       "              'uid': '05e8a5c7-7019-46db-8e8e-3bcdecb5bf4d',\n",
-       "              'x': [],\n",
-       "              'y': []}],\n",
-       "    'layout': {'bargap': 0.4,\n",
-       "               'template': '...',\n",
-       "               'title': {'text': 'Live Spectrum'},\n",
-       "               'xaxis': {'range': [0, 4000], 'title': {'text': 'Frequency (Hz)'}},\n",
-       "               'yaxis': {'range': [0, 120], 'title': {'text': ''}}}\n",
-       "})"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting live plot...\n",
-      "{'name': 'nanoSHARC micArray16 UAC2.0: USB Audio (hw:3,0)', 'index': 5, 'hostapi': 0, 'max_input_channels': 16, 'max_output_channels': 0, 'default_low_input_latency': 0.008684807256235827, 'default_low_output_latency': -1.0, 'default_high_input_latency': 0.034829931972789115, 'default_high_output_latency': -1.0, 'default_samplerate': 44100.0} 44100.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig = go.FigureWidget()\n",
     "fig.add_trace(go.Bar(x=[], y=[], marker_color='#0C3762')) \n",
@@ -913,7 +817,7 @@
     "time.sleep(5)\n",
     "\n",
     "dev.collect_samples = False \n",
-    "plot_thread.join()\n"
+    "plot_thread.join()"
    ]
   }
  ],
