--- a/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
+++ b/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
@@ -218,10 +218,10 @@
     "\n",
     "## What we will do\n",
     "\n",
-    "- Stream and process live audio data from laptop’s microphone\n",
-    "- Revisit a simple beamforming example with microphone array data\n",
-    "- Demonstration of an application that brings together the discussed concepts\n",
-    "- _Bonus:_ Implement a real-time visualization of frequency components\n"
+    "- Stream and process live audio data from the laptop’s microphone\n",
+    "- Revisit a simple beamforming example using microphone array data\n",
+    "- Demonstrate an application that integrates the discussed concepts\n",
+    "- _Bonus:_ Implement a real-time visualization of frequency components"
    ]
   },
   {
@@ -231,8 +231,8 @@
     "## Getting data from input channels\n",
     "\n",
     "### Sounddevice library\n",
-    "- current environment must include the `sounddevice` library\n",
-    "- first check the available audio devices on the system."
+    "- Current environment must include the `sounddevice` library\n",
+    "- First step: Check the available audio devices on the system"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Acoular's streaming method\n",
+    "###  Acoular's SoundDeviceSamplesGenerator\n",
     "\n",
     "- `SoundDeviceSamplesGenerator` class handles audio data streams\n",
     "- Uses the sounddevice library internally\n",
