--- a/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
+++ b/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "- Stream and process live audio data from the laptop’s microphone\n",
     "- Revisit a simple beamforming example using microphone array data\n",
-    "- Demonstrate an application that integrates the discussed concepts\n",
+    "- Demonstrate an application that integrates the discussed concepts: Acoular extension _SpectAcoular_\n",
     "- _Bonus:_ Implement a real-time visualization of frequency components"
    ]
   },
@@ -649,18 +649,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SpectAcoular!\n",
+    "## SpectAcoular! Extension for Acoular\n",
     "### What it is\n",
-    "- Extension for Acoular\n",
+    "- Easy and interactive microphone array data processing\n",
     "- Designed for microphone array data acquisition, analysis, and exploration\n",
     "- Provides interactive tools for real-time beamforming and signal processing\n",
     "- Implements graphical controls (widgets) for user interaction\n",
-    "- Uses [_Bokeh_](https://bokeh.org/) for web-based visualization, allowing client-server applications\n",
-    "\n",
-    "### Why to use it\n",
-    "- Easy and interactive microphone array data processing\n",
-    "- Enables real-time signal exploration and beamforming analysis\n",
-    "- Allows users to analyze sound sources in real time\n",
     "- Customizable and expandable for different applications\n",
     "\n",
     "### Where to find it\n",
@@ -669,6 +663,7 @@
     "- **Documentation:** [SpectAcoular Docs](https://acoular.github.io/spectacoular)\n",
     "\n",
     "### How it works\n",
+    "- Uses [_Bokeh_](https://bokeh.org/) for web-based visualization, allowing client-server applications\n",
     "- Translates class attributes from Acoular into interactive control widgets\n",
     "- Allows real-time parameter adjustments directly from the user interface\n",
     "- _Example:_ Creating an Interactive Grid\n"
