--- a/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
+++ b/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
@@ -661,12 +661,18 @@
     "- **GitHub:** [SpectAcoular Repository](https://github.com/acoular/spectacoular)\n",
     "- **Anaconda:** [SpectAcoular Package](https://anaconda.org/acoular/spectacoular)\n",
     "- **Documentation:** [SpectAcoular Docs](https://acoular.github.io/spectacoular)\n",
+    "  \n",
+    "### Installation\n",
+    "With Conda:\n",
+    "`conda install acoular::spectacoular`\n",
     "\n",
     "### How it works\n",
     "- Uses [_Bokeh_](https://bokeh.org/) for web-based visualization, allowing client-server applications\n",
     "- Translates class attributes from Acoular into interactive control widgets\n",
     "- Allows real-time parameter adjustments directly from the user interface\n",
-    "- _Example:_ Creating an Interactive Grid\n"
+    "- _Example:_ Creating an Interactive Grid, as shown below\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -726,6 +732,9 @@
     }
    ],
    "source": [
+    "# Ensure that Bokeh and SpectAcoular are installed in the current environment.\n",
+    "# If these packages are not available, you may skip this cell.\n",
+    "\n",
     "from spectacoular import RectGrid\n",
     "from bokeh.io import show, output_notebook\n",
     "from bokeh.layouts import column\n",
@@ -753,7 +762,7 @@
     "  - to evaluate rotating array data\n",
     "  - to measure sound sources\n",
     "  - ...\n",
-    "- Microphone array measurement app\n"
+    "- As an example, we will take a look at the [Microphone Array Measurement App](https://acoular.github.io/spectacoular/apps/measurementapp.html)\n"
    ]
   },
   {
@@ -762,7 +771,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Microphone array measurement app\n",
     "os.popen('msm_app --port=5507 --args --device=sounddevice')"
    ]
   },
