--- a/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
+++ b/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
@@ -658,9 +658,9 @@
     "- Customizable and expandable for different applications\n",
     "\n",
     "### Where to find it\n",
-    "- **GitHub:** [SpectAcoular Repository](https://github.com/acoular/spectacoular)\n",
-    "- **Anaconda:** [SpectAcoular Package](https://anaconda.org/acoular/spectacoular)\n",
-    "- **Documentation:** [SpectAcoular Docs](https://acoular.github.io/spectacoular)\n",
+    "- **GitHub:** [SpectAcoular repository](https://github.com/acoular/spectacoular)\n",
+    "- **Anaconda:** [SpectAcoular package](https://anaconda.org/acoular/spectacoular)\n",
+    "- **Documentation:** [SpectAcoular docs](https://acoular.github.io/spectacoular)\n",
     "  \n",
     "### Installation\n",
     "With Conda:\n",
@@ -762,7 +762,7 @@
     "  - to evaluate rotating array data\n",
     "  - to measure sound sources\n",
     "  - ...\n",
-    "- As an example, we will take a look at the [Microphone Array Measurement App](https://acoular.github.io/spectacoular/apps/measurementapp.html)\n"
+    "- As an example, we will take a look at the [Microphone array measurement app](https://acoular.github.io/spectacoular/apps/measurementapp.html)\n"
    ]
   },
   {
