Standardization of headings

--- a/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
+++ b/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transforming  voltages into sound pressure \n",
+    "### Transform voltages into sound pressure \n",
     "\n",
     "- Recorded signal is in volts and needs conversion to sound pressure (Pa)\n",
     "- Sensitivity defines voltage output per unit of sound pressure\n",
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recording a signal\n",
+    "### Record a signal\n",
     "\n",
     "- Acquire a signal with a duration of 2 seconds\n",
     "- Read input stream block by block (block size: 256 samples)\n",
