--- a/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
+++ b/06_Acoustic_Data_Acquisition_and_Processing_using_a_MEMS_Microphone_Array.ipynb
@@ -218,7 +218,7 @@
     "\n",
     "## What we will do\n",
     "\n",
-    "- Stream and process live audio data from the laptop’s microphone\n",
+    "- Stream and process live audio data from the laptop's microphone\n",
     "- Revisit a simple beamforming example using microphone array data\n",
     "- Demonstrate an application that integrates the discussed concepts: Acoular extension _SpectAcoular_\n",
     "- _Bonus:_ Implement a real-time visualization of frequency components"
@@ -319,7 +319,7 @@
     "- Read input stream block by block (block size: 256 samples)\n",
     "- Use `return_result` to retrieve all blocks at once\n",
     "- `SoundDeviceSamplesGenerator` prints device properties when streaming starts\n",
-    "- Array `t`: first axis is time data, second axis is number of channels"
+    "- Array `t`: The first axis is time data, and the second axis is the number of channels"
    ]
   },
   {
@@ -377,7 +377,7 @@
     "\n",
     "- Acoular allows additional processing steps beyond acquiring time data\n",
     "- Processing is handled via classes from the `tprocess.py` module\n",
-    "- `WriteH5` class saves the full stream to an HDF5 file\n",
+    "- `WriteH5` class saves the stream to an HDF5 file\n",
     "- Alternatively, `WriteWav` can be used to save the stream as a WAV file"
    ]
   },
@@ -404,7 +404,7 @@
     "- Two ways to start acquisition and writing:\n",
     "\n",
     "    1. `hdf5.result(num=256)`: Generates data block-wise\n",
-    "    2. `hdf5.save()`: Runs the processing chain in one go, without returning data\n",
+    "    2. `hdf5.save()`: Runs the processing chain in one go without returning data\n",
     "- Option 2 is used"
    ]
   },
@@ -537,7 +537,7 @@
     "### Define the steering vector for beamforming\n",
     "\n",
     "- Set the speed of sound in air\n",
-    "- Create a steering vector using microphone geometry and defined rectangular grid"
+    "- Create a steering vector using microphone geometry and a defined rectangular grid"
    ]
   },
   {
@@ -554,8 +554,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup Beamforming\n",
-    "- Transform recorded time-domain signal into the frequency domain\n",
+    "### Setup beamforming\n",
+    "- Transform the recorded time-domain signal into the frequency-domain\n",
     "- Apply Hanning window with 50% overlap\n",
     "- Use a block size of 128 samples\n",
     "- `BeamformerBase` performs beamforming using the delay-and-sum algorithm"
@@ -576,7 +576,7 @@
    "metadata": {},
    "source": [
     "### Apply beamforming \n",
-    "- _Example_: Use third-octave frequency band centered at 4000 Hz\n",
+    "- _Example_: Use a third-octave frequency band centred at 4000 Hz\n",
     "- Convert raw beamforming output to sound pressure levels (SPL) in decibels"
    ]
   },
@@ -758,7 +758,7 @@
     "### Pre-build interactive applications\n",
     "\n",
     "- Module provides various predefined examples and applications\n",
-    "  - to explore point-spread function of a microphone arrays\n",
+    "  - to explore the point-spread function of a microphone arrays\n",
     "  - to evaluate rotating array data\n",
     "  - to measure sound sources\n",
     "  - ...\n",
@@ -779,7 +779,7 @@
    "metadata": {},
    "source": [
     "## Bonus: Create a simple real-time processing plot\n",
-    "- Process live audio data from your laptop’s microphone\n",
+    "- Process live audio data from the laptop’s microphone\n",
     "- Create a live plot of a frequency spectrum\n",
     "- Use threading to enable parallel processing\n",
     "- You may need to install _Plotly_ and _ipywidgets_\n",
@@ -790,7 +790,7 @@
     "    `pip install plotly ipython jupyterlab ipywidgets`\n",
     "\n",
     "\n",
-    "    Alternatively, if you're using Conda, install them with:\n",
+    "    Alternatively, if you are using Conda, install them with:\n",
     "\n",
     "\n",
     "    `conda install -c conda-forge plotly ipython jupyterlab ipywidgets`\n",
