simplify trajectory and add images for pipeline

--- a/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
+++ b/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
@@ -18,6 +18,9 @@
        "        font-family: \"Computer Modern\";\n",
        "        src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
        "    }\n",
+       "    body {\n",
+       "        font-size: 100%;\n",
+       "    }\n",
        "    /* custom code settings */\n",
        "    .cm-keyword {\n",
        "        color: #A81D1E !important;\n",
@@ -92,8 +95,11 @@
        "    div.text_cell_render{\n",
        "        font-family: 'Roboto',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
        "        line-height: 135%;\n",
-       "        font-size: 110%;\n",
+       "        font-size: 130%;\n",
        "        width:100%;\n",
+       "    }\n",
+       "    div.CodeMirror{\n",
+       "        font-size: 120%;\n",
        "    }\n",
        "    div.cell.selected:before, div.cell.selected.jupyter-soft-selected:before {\n",
        "        background: #0C3762;\n",
@@ -294,17 +300,23 @@
     "\n",
     "\n",
     "    # Define source positions\n",
-    "    source_pos1 = ( 1,  1, 0)\n",
-    "    source_pos2 = ( 1, -1, 0)\n",
-    "    source_pos3 = (-1, -1, 0)\n",
-    "    source_pos4 = (-1,  1, 0)\n",
+    "    sp1 = ( 1,  1, 0)\n",
+    "    sp2 = ( 1, -1, 0)\n",
+    "    sp3 = (-1, -1, 0)\n",
+    "    sp4 = (-1,  1, 0)\n",
+    "    \n",
+    "    # helper method to create linear trajectories in reference origin of the \n",
+    "    # source configuration\n",
+    "    def create_trajectory(sp):\n",
+    "        return ac.Trajectory(points={0:(-lx+sp[0],sp[1],lz+sp[2]),\n",
+    "                                     t_pass:(lx+sp[0],sp[1],lz+sp[2])})\n",
+    "       \n",
+    "    source_pos = [sp1, sp2, sp3, sp4]\n",
     "\n",
-    "    source_pos = [source_pos1, source_pos2, source_pos3, source_pos4]\n",
-    "\n",
-    "    tr1 = create_trajectory(source_pos1)\n",
-    "    tr2 = create_trajectory(source_pos2)\n",
-    "    tr3 = create_trajectory(source_pos3)\n",
-    "    tr4 = create_trajectory(source_pos4)\n",
+    "    tr1 = create_trajectory(sp1)\n",
+    "    tr2 = create_trajectory(sp2)\n",
+    "    tr3 = create_trajectory(sp3)\n",
+    "    tr4 = create_trajectory(sp4)\n",
     "\n",
     "    trs = [tr1, tr2, tr3, tr4]\n",
     "\n",
@@ -345,6 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Path('./cache/03').mkdir(parents=True, exist_ok=True)\n",
     "ac.config.cache_dir = './cache/03'"
    ]
   },
@@ -390,7 +403,7 @@
     "v = 60 # km/h, source velocity\n",
     "vx_m = v/3.6 # m/s, source velocity converted to meters per second\n",
     "t_pass = 2 * lx / vx_m  # s, total pass-by duration\n",
-    "sfreq = 51200/4 # Hz, sampling frequency\n",
+    "sfreq = 12800 # Hz, sampling frequency\n",
     "num_samples = int(t_pass * sfreq) # total number of samples\n",
     "block_size = int(num_samples/16) # number of samples per processing block\n",
     "freq = 4000  # Hz, third-octave band used for analysis"
@@ -445,32 +458,11 @@
    "execution_count": 6,
    "id": "1e2dfd51-b9d4-4246-ab8f-4de18e41a85b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0.0: (-5.0, 0.0, 10.0), 0.6: (5.0, 0.0, 10.0)}\n",
-      "[[-5.00000000e+00  0.00000000e+00  1.00000000e+01]\n",
-      " [-3.33333333e+00  0.00000000e+00  1.00000000e+01]\n",
-      " [-1.66666667e+00  0.00000000e+00  1.00000000e+01]\n",
-      " [ 8.88178420e-16  0.00000000e+00  1.00000000e+01]\n",
-      " [ 1.66666667e+00  0.00000000e+00  1.00000000e+01]\n",
-      " [ 3.33333333e+00  0.00000000e+00  1.00000000e+01]\n",
-      " [ 5.00000000e+00  0.00000000e+00  1.00000000e+01]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def create_trajectory(source_pos):\n",
-    "    tr = ac.Trajectory()\n",
-    "    tr.points[0] = (-lx + source_pos[0], source_pos[1], source_pos[2] + lz)\n",
-    "    tr.points[t_pass] = (lx + source_pos[0], source_pos[1], source_pos[2] + lz)\n",
-    "    return tr\n",
+    "# trajectory of the origin of the source configuration\n",
+    "tr0 = ac.Trajectory(points={0:(-lx,0,lz),t_pass:(lx,0,lz)})\n",
     "\n",
-    "tr0 = create_trajectory(( 0, 0, 0))\n",
-    "print(tr0.points)\n",
-    "print(np.array(list(tr0.traj(0,t_pass+0.1,0.1))))\n",
     "\n",
     "sigs, trs, col, cached_mix = generate_synth_data()"
    ]
@@ -550,7 +542,18 @@
    "id": "b7057c90",
    "metadata": {},
    "source": [
-    "- create processing chain for fixed focus beamforming"
+    "- create processing chain for fixed focus beamforming\n",
+    "<div style=\"display: flex;\">\n",
+    "  <!-- Left column with two images stacked vertically -->\n",
+    "  <div style=\"display: flex; flex-direction: column; margin-right: 10px;\">\n",
+    "    <img src=\"./img/pipeline_01.svg\" width=\"600\" style=\"margin-bottom: 10px;\">\n",
+    "  </div>\n",
+    "  <!-- Right column with one image -->\n",
+    "  <div>\n",
+    "    <img src=\"./img/chain.png\" width=\"100\">\n",
+    "  </div>\n",
+    "</div>\n",
+    "<img src=\"./img/pipeline_02.svg\" width=\"800\">"
    ]
   },
   {
@@ -648,7 +651,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"./vid/fixed_focus.mp4\" controls  >\n",
+       "<video src=\"./vid/moving_focus.mp4\" controls  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -676,7 +679,7 @@
     "# writer = FFMpegWriter(fps=15, metadata=dict(artist='Frank'), bitrate=1800)\n",
     "# HTML(ani.to_jshtml())\n",
     "# ani.save(\"./vid/moving_focus.mp4\", writer=writer)\n",
-    "Video(\"./vid/fixed_focus.mp4\")"
+    "Video(\"./vid/moving_focus.mp4\")"
    ]
   },
   {
