outsource methods for animation

--- a/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
+++ b/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
@@ -287,7 +287,7 @@
     "    ax.set_title(f't = {ttime:.2f}s')\n",
     "    return state['scatter_plots'] + [state['grid_wire']]\n",
     "\n",
-    "def generate_synth_data():\n",
+    "def generate_synth_data(sfreq, num_samples, lx, lz):\n",
     "    nseed = 1\n",
     "    convamp = True \n",
     "    # Initialize 4 different WNoiseGenerator objects. \n",
@@ -333,7 +333,39 @@
     "    source_mixer = ac.SourceMixer(sources=[mps1, mps2, mps3, mps4])\n",
     "    cached_mix = ac.Cache(source=source_mixer)\n",
     "    \n",
-    "    return sigs, trs, col, cached_mix"
+    "    return sigs, trs, col, cached_mix\n",
+    "\n",
+    "# generate animation for fixed focus\n",
+    "def gen_ani_ff(rg, micgeom, trs, lz, col):\n",
+    "    fig, ax, scatter_plots = init_animation_fixed_focus(rg, micgeom, trs, lz, col)\n",
+    "    ani = animation.FuncAnimation(\n",
+    "        fig,\n",
+    "        update_frame_fixed_focus,\n",
+    "        frames=101,\n",
+    "        interval=50,\n",
+    "        blit=False,\n",
+    "        fargs=(scatter_plots, trs, t_pass, ax)\n",
+    "    )\n",
+    "    writer = FFMpegWriter(fps=15, metadata=dict(artist='Acoular'), bitrate=1800)\n",
+    "    HTML(ani.to_jshtml())\n",
+    "    ani.save(\"./vid/fixed_focus.mp4\", writer=writer)\n",
+    "    \n",
+    "# generate animation for fixed focus\n",
+    "def gen_ani_mv(rgm, tr0, trs, micgeom, t_pass, lz, col):\n",
+    "    fig, ax, state = init_animation_moving_focus(\n",
+    "        rgm, tr0, trs, micgeom, t_pass, lz, col\n",
+    "    )\n",
+    "    ani = animation.FuncAnimation(\n",
+    "        fig,\n",
+    "        update_frame_moving_focus,\n",
+    "        frames=101,\n",
+    "        fargs=(state, rgm, tr0, trs, col, ax),\n",
+    "        interval=50,\n",
+    "        blit=False\n",
+    "    )\n",
+    "    writer = FFMpegWriter(fps=15, metadata=dict(artist='Acoular'), bitrate=1800)\n",
+    "    HTML(ani.to_jshtml())\n",
+    "    ani.save(\"./vid/moving_focus.mp4\", writer=writer)"
    ]
   },
   {
@@ -464,7 +496,7 @@
     "tr0 = ac.Trajectory(points={0:(-lx,0,lz),t_pass:(lx,0,lz)})\n",
     "\n",
     "\n",
-    "sigs, trs, col, cached_mix = generate_synth_data()"
+    "sigs, trs, col, cached_mix = generate_synth_data(sfreq, num_samples, lx, lz)"
    ]
   },
   {
@@ -522,18 +554,8 @@
     }
    ],
    "source": [
-    "# fig, ax, scatter_plots = init_animation_fixed_focus(rg, micgeom, trs, lz, col)\n",
-    "# ani = animation.FuncAnimation(\n",
-    "#     fig,\n",
-    "#     update_frame_fixed_focus,\n",
-    "#     frames=101,\n",
-    "#     interval=50,\n",
-    "#     blit=False,\n",
-    "#     fargs=(scatter_plots, trs, t_pass, ax)\n",
-    "# )\n",
-    "# writer = FFMpegWriter(fps=15, metadata=dict(artist='Frank'), bitrate=1800)\n",
-    "# HTML(ani.to_jshtml())\n",
-    "# ani.save(\"./vid/fixed_focus.mp4\", writer=writer)\n",
+    "# uncomment if you want to generate the animation\n",
+    "# gen_ani_ff(rg, micgeom, trs, lz, col)\n",
     "Video(\"./vid/fixed_focus.mp4\")"
    ]
   },
@@ -665,20 +687,8 @@
     }
    ],
    "source": [
-    "# fig, ax, state = init_animation_moving_focus(\n",
-    "#     rgm, tr0, trs, micgeom, t_pass, lz, col\n",
-    "# )\n",
-    "# ani = animation.FuncAnimation(\n",
-    "#     fig,\n",
-    "#     update_frame_moving_focus,\n",
-    "#     frames=101,\n",
-    "#     fargs=(state, rgm, tr0, trs, col, ax),\n",
-    "#     interval=50,\n",
-    "#     blit=False\n",
-    "# )\n",
-    "# writer = FFMpegWriter(fps=15, metadata=dict(artist='Frank'), bitrate=1800)\n",
-    "# HTML(ani.to_jshtml())\n",
-    "# ani.save(\"./vid/moving_focus.mp4\", writer=writer)\n",
+    "# uncomment if you want to generate the animation\n",
+    "# gen_ani_mv(rgm, tr0, trs, micgeom, t_pass, lz, col)\n",
     "Video(\"./vid/moving_focus.mp4\")"
    ]
   },
