--- a/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
+++ b/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
@@ -331,9 +331,7 @@
     "\n",
     "    # Create SourceMixer with all point sources\n",
     "    source_mixer = ac.SourceMixer(sources=[mps1, mps2, mps3, mps4])\n",
-    "    cached_mix = ac.Cache(source=source_mixer)\n",
-    "    \n",
-    "    return sigs, trs, col, cached_mix\n",
+    "    return trs, col, source_mixer\n",
     "\n",
     "# generate animation for fixed focus\n",
     "def gen_ani_ff(rg, micgeom, trs, lz, col):\n",
@@ -494,9 +492,7 @@
    "source": [
     "# trajectory of the origin of the source configuration\n",
     "tr0 = ac.Trajectory(points={0:(-lx,0,lz),t_pass:(lx,0,lz)})\n",
-    "\n",
-    "\n",
-    "sigs, trs, col, cached_mix = generate_synth_data(sfreq, num_samples, lx, lz)"
+    "trs, col, source_mixer = generate_synth_data(sfreq, num_samples, lx, lz)"
    ]
   },
   {
@@ -525,9 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rg = ac.RectGrid( x_min=-4, x_max=4,\n",
-    "                       y_min=-2, y_max=2,\n",
-    "                       z=lz, increment=0.1 ) # defines a grid of  81 × 41  points, total 3321\n",
+    "rg = ac.RectGrid(x_min=-4, x_max=4,y_min=-2, y_max=2,z=lz, increment=0.1 )\n",
     "st = ac.SteeringVector(grid=rg, mics=micgeom)"
    ]
   },
@@ -585,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fi = ac.FiltFiltOctave(source=cached_mix, band=freq, fraction='Third octave')\n",
+    "fi = ac.FiltFiltOctave(source=source_mixer, band=freq, fraction='Third octave')\n",
     "bt = ac.BeamformerTimeSq(source=fi, steer=st, r_diag=True)\n",
     "avgt = ac.Average(source=bt, num_per_average=block_size)  # 15 single images\n",
     "cacht = ac.Cache(source=avgt)  # cache to prevent recalculation"
@@ -658,9 +652,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgm = ac.RectGrid( x_min=-2, x_max=2,\n",
-    "                       y_min=-2, y_max=2,\n",
-    "                       z=0, increment=0.1 )\n",
+    "rgm = ac.RectGrid(x_min=-2, x_max=2,y_min=-2, y_max=2,z=0, increment=0.1)\n",
     "st = ac.SteeringVector(grid=rgm, mics=micgeom)"
    ]
   },
@@ -708,7 +700,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fi = ac.FiltFiltOctave(source=cached_mix, band=freq, fraction='Third octave')\n",
+    "fi = ac.FiltFiltOctave(source=source_mixer, band=freq, fraction='Third octave')\n",
     "bt = ac.BeamformerTimeSqTraj(source=fi, steer=st, trajectory=tr0, r_diag=True)\n",
     "avgt = ac.Average(source=bt, num_per_average=block_size)  # 15 single images\n",
     "cacht = ac.Cache(source=avgt)  # cache to prevent recalculation"
@@ -803,7 +795,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fi = ac.FiltFiltOctave(source=cached_mix, band=freq, fraction='Third octave')\n",
+    "fi = ac.FiltFiltOctave(source=source_mixer, band=freq, fraction='Third octave')\n",
     "bt = ac.BeamformerCleantSqTraj(source=fi, steer=st, trajectory=tr0, conv_amp=True)\n",
     "avgt = ac.Average(source=bt, num_per_average=block_size)  # 15 single images\n",
     "cacht = ac.Cache(source=avgt)  # cache to prevent recalculation"
