--- a/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
+++ b/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
@@ -352,24 +352,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "effb9a6f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<video src=\"./vid/fixed_focus.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/kujawski/Documents/Projekte/AcoularDFG/workshop2025/workshop_DAS-DAGA-2025/vid'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# uncomment if you want to generate the animation\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mgen_ani_ff\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmicgeom\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlz\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcol\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m Video(\u001b[33m\"\u001b[39m\u001b[33m./vid/fixed_focus.mp4\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 159\u001b[39m, in \u001b[36mgen_ani_ff\u001b[39m\u001b[34m(rg, micgeom, trs, lz, col)\u001b[39m\n\u001b[32m    157\u001b[39m writer = FFMpegWriter(fps=\u001b[32m15\u001b[39m, metadata=\u001b[38;5;28mdict\u001b[39m(artist=\u001b[33m'\u001b[39m\u001b[33mAcoular\u001b[39m\u001b[33m'\u001b[39m), bitrate=\u001b[32m1800\u001b[39m)\n\u001b[32m    158\u001b[39m HTML(ani.to_jshtml())\n\u001b[32m--> \u001b[39m\u001b[32m159\u001b[39m \u001b[43mani\u001b[49m\u001b[43m.\u001b[49m\u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m./vid/fixed_focus.mp4\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwriter\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwriter\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/micromamba/envs/acoular-workshop-das-daga-25/lib/python3.13/site-packages/matplotlib/animation.py:1098\u001b[39m, in \u001b[36mAnimation.save\u001b[39m\u001b[34m(self, filename, writer, fps, dpi, codec, bitrate, extra_args, metadata, extra_anim, savefig_kwargs, progress_callback)\u001b[39m\n\u001b[32m   1093\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m a * np.array([r, g, b]) + \u001b[32m1\u001b[39m - a\n\u001b[32m   1095\u001b[39m \u001b[38;5;66;03m# canvas._is_saving = True makes the draw_event animation-starting\u001b[39;00m\n\u001b[32m   1096\u001b[39m \u001b[38;5;66;03m# callback a no-op; canvas.manager = None prevents resizing the GUI\u001b[39;00m\n\u001b[32m   1097\u001b[39m \u001b[38;5;66;03m# widget (both are likewise done in savefig()).\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1098\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m (writer.saving(\u001b[38;5;28mself\u001b[39m._fig, filename, dpi),\n\u001b[32m   1099\u001b[39m       cbook._setattr_cm(\u001b[38;5;28mself\u001b[39m._fig.canvas, _is_saving=\u001b[38;5;28;01mTrue\u001b[39;00m, manager=\u001b[38;5;28;01mNone\u001b[39;00m)):\n\u001b[32m   1100\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m writer._supports_transparency():\n\u001b[32m   1101\u001b[39m         facecolor = savefig_kwargs.get(\u001b[33m'\u001b[39m\u001b[33mfacecolor\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   1102\u001b[39m                                        mpl.rcParams[\u001b[33m'\u001b[39m\u001b[33msavefig.facecolor\u001b[39m\u001b[33m'\u001b[39m])\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/micromamba/envs/acoular-workshop-das-daga-25/lib/python3.13/contextlib.py:141\u001b[39m, in \u001b[36m_GeneratorContextManager.__enter__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    139\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[38;5;28mself\u001b[39m.args, \u001b[38;5;28mself\u001b[39m.kwds, \u001b[38;5;28mself\u001b[39m.func\n\u001b[32m    140\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m141\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgen\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    142\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[32m    143\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mgenerator didn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt yield\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/micromamba/envs/acoular-workshop-das-daga-25/lib/python3.13/site-packages/matplotlib/animation.py:221\u001b[39m, in \u001b[36mAbstractMovieWriter.saving\u001b[39m\u001b[34m(self, fig, outfile, dpi, *args, **kwargs)\u001b[39m\n\u001b[32m    216\u001b[39m     _log.info(\u001b[33m\"\u001b[39m\u001b[33mDisabling savefig.bbox = \u001b[39m\u001b[33m'\u001b[39m\u001b[33mtight\u001b[39m\u001b[33m'\u001b[39m\u001b[33m, as it may cause \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    217\u001b[39m               \u001b[33m\"\u001b[39m\u001b[33mframe size to vary, which is inappropriate for \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    218\u001b[39m               \u001b[33m\"\u001b[39m\u001b[33manimation.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    220\u001b[39m \u001b[38;5;66;03m# This particular sequence is what contextlib.contextmanager wants\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m221\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43msetup\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdpi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    222\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m mpl.rc_context({\u001b[33m'\u001b[39m\u001b[33msavefig.bbox\u001b[39m\u001b[33m'\u001b[39m: \u001b[38;5;28;01mNone\u001b[39;00m}):\n\u001b[32m    223\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/micromamba/envs/acoular-workshop-das-daga-25/lib/python3.13/site-packages/matplotlib/animation.py:308\u001b[39m, in \u001b[36mMovieWriter.setup\u001b[39m\u001b[34m(self, fig, outfile, dpi)\u001b[39m\n\u001b[32m    306\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msetup\u001b[39m(\u001b[38;5;28mself\u001b[39m, fig, outfile, dpi=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m    307\u001b[39m     \u001b[38;5;66;03m# docstring inherited\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m308\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43msetup\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdpi\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdpi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    309\u001b[39m     \u001b[38;5;28mself\u001b[39m._w, \u001b[38;5;28mself\u001b[39m._h = \u001b[38;5;28mself\u001b[39m._adjust_frame_size()\n\u001b[32m    310\u001b[39m     \u001b[38;5;66;03m# Run here so that grab_frame() can write the data to a pipe. This\u001b[39;00m\n\u001b[32m    311\u001b[39m     \u001b[38;5;66;03m# eliminates the need for temp files.\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/micromamba/envs/acoular-workshop-das-daga-25/lib/python3.13/site-packages/matplotlib/animation.py:168\u001b[39m, in \u001b[36mAbstractMovieWriter.setup\u001b[39m\u001b[34m(self, fig, outfile, dpi)\u001b[39m\n\u001b[32m    154\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    155\u001b[39m \u001b[33;03mSetup for writing the movie file.\u001b[39;00m\n\u001b[32m    156\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    165\u001b[39m \u001b[33;03m    in pixels of the resulting movie file.\u001b[39;00m\n\u001b[32m    166\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    167\u001b[39m \u001b[38;5;66;03m# Check that path is valid\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m168\u001b[39m \u001b[43mPath\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mparent\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstrict\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m    169\u001b[39m \u001b[38;5;28mself\u001b[39m.outfile = outfile\n\u001b[32m    170\u001b[39m \u001b[38;5;28mself\u001b[39m.fig = fig\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/micromamba/envs/acoular-workshop-das-daga-25/lib/python3.13/pathlib/_local.py:670\u001b[39m, in \u001b[36mPath.resolve\u001b[39m\u001b[34m(self, strict)\u001b[39m\n\u001b[32m    664\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresolve\u001b[39m(\u001b[38;5;28mself\u001b[39m, strict=\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[32m    665\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    666\u001b[39m \u001b[33;03m    Make the path absolute, resolving all symlinks on the way and also\u001b[39;00m\n\u001b[32m    667\u001b[39m \u001b[33;03m    normalizing it.\u001b[39;00m\n\u001b[32m    668\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m670\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.with_segments(\u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrealpath\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstrict\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstrict\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m<frozen posixpath>:445\u001b[39m, in \u001b[36mrealpath\u001b[39m\u001b[34m(filename, strict)\u001b[39m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '/home/kujawski/Documents/Projekte/AcoularDFG/workshop2025/workshop_DAS-DAGA-2025/vid'"
+     ]
     }
    ],
    "source": [
@@ -399,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d71c2cb3-14c2-4e58-96a2-a67edc802d05",
    "metadata": {},
    "outputs": [],
@@ -412,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9a803754-b006-4318-b0f6-faf52439a01f",
    "metadata": {
     "scrolled": false
@@ -459,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7b1d08b7",
    "metadata": {},
    "outputs": [],
@@ -470,24 +474,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "4e16c6ea",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<video src=\"./vid/moving_focus.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "To embed videos, you must pass embed=True (this may make your notebook files huge)\nConsider passing Video(url='...')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# uncomment if you want to generate the animation\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# gen_ani_mv(rgm, tr0, trs, micgeom, t_pass, lz, col)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mVideo\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m./vid/moving_focus.mp4\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/micromamba/envs/acoular-workshop-das-daga-25/lib/python3.13/site-packages/IPython/core/display.py:1217\u001b[39m, in \u001b[36mVideo.__init__\u001b[39m\u001b[34m(self, data, url, filename, embed, mimetype, width, height, html_attributes)\u001b[39m\n\u001b[32m   1211\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m data \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m embed:\n\u001b[32m   1212\u001b[39m     msg = \u001b[33m'\u001b[39m\u001b[33m'\u001b[39m.join([\n\u001b[32m   1213\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mTo embed videos, you must pass embed=True \u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   1214\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m(this may make your notebook files huge)\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m,\n\u001b[32m   1215\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mConsider passing Video(url=\u001b[39m\u001b[33m'\u001b[39m\u001b[33m...\u001b[39m\u001b[33m'\u001b[39m\u001b[33m)\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   1216\u001b[39m     ])\n\u001b[32m-> \u001b[39m\u001b[32m1217\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n\u001b[32m   1219\u001b[39m \u001b[38;5;28mself\u001b[39m.mimetype = mimetype\n\u001b[32m   1220\u001b[39m \u001b[38;5;28mself\u001b[39m.embed = embed\n",
+      "\u001b[31mValueError\u001b[39m: To embed videos, you must pass embed=True (this may make your notebook files huge)\nConsider passing Video(url='...')"
+     ]
     }
    ],
    "source": [
@@ -507,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "999670d0-d239-4d8b-99ff-74bdbd5b65c8",
    "metadata": {},
    "outputs": [],
@@ -520,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0e93a094-7ad1-4bb3-b44d-6ff0140d8a1c",
    "metadata": {
     "scrolled": false
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ad5051d3-6c06-44da-9f73-d9e1ee690f37",
    "metadata": {},
    "outputs": [],
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "95efa838-40cd-4d79-9106-a5f6c9e9609a",
    "metadata": {},
    "outputs": [
@@ -633,6 +634,16 @@
    "source": [
     "<h2>References</h2>\n",
     "(1)</div><div class=\"csl-right-inline\" style=\"margin: 0 .4em 0 1.5em;\">Cousson, R.; Leclère, Q.; Pallas, M.-A.; Bérengier, M. A Time Domain CLEAN Approach for the Identification of Acoustic Moving Sources. <i>Journal of Sound and Vibration</i> 2019, <i>443</i>, 47–62. <a href=\"https://doi.org/10.1016/j.jsv.2018.11.026\">https://doi.org/10.1016/j.jsv.2018.11.026</a>.</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4d22fec",
+   "metadata": {},
+   "source": [
+    "## Acoular Future Directions Survey – Don't forget to participate! \n",
+    "\n",
+    "<img src=\"img/survey.png\" alt=\"Survey\" style=\"height: auto; width: 50%;\">"
    ]
   }
  ],
