--- a/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
+++ b/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
@@ -3,17 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30472242-7ab5-4bf8-ad11-5004edd855c6",
+   "id": "388f6c48",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import acoular as ac\n",
     "from IPython.core.display import HTML\n",
-    "from IPython.display import Video\n",
     "\n",
     "def css_styling():\n",
     "    styles = open(\"./custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
-    "css_styling()\n",
+    "css_styling()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30472242-7ab5-4bf8-ad11-5004edd855c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Video\n",
     "\n",
     "# for the purpose of readability, we will move the functions for the animations,\n",
     "# the necessary imports, and the method to generate synthetic data to the beginning of the notebook\n",
@@ -152,6 +162,10 @@
     "    source_mixer = ac.SourceMixer(sources=[mps1, mps2, mps3, mps4])\n",
     "    return trs, col, source_mixer\n",
     "\n",
+    "\n",
+    "save_path = Path(\"./vid\")\n",
+    "save_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "# generate animation for fixed focus\n",
     "def gen_ani_ff(rg, micgeom, trs, lz, col):\n",
     "    fig, ax, scatter_plots = init_animation_fixed_focus(rg, micgeom, trs, lz, col)\n",
@@ -165,7 +179,7 @@
     "    )\n",
     "    writer = FFMpegWriter(fps=15, metadata=dict(artist='Acoular'), bitrate=1800)\n",
     "    HTML(ani.to_jshtml())\n",
-    "    ani.save(\"./vid/fixed_focus.mp4\", writer=writer)\n",
+    "    ani.save(save_path / \"fixed_focus.mp4\", writer=writer)\n",
     "    \n",
     "# generate animation for fixed focus\n",
     "def gen_ani_mv(rgm, tr0, trs, micgeom, t_pass, lz, col):\n",
@@ -182,7 +196,7 @@
     "    )\n",
     "    writer = FFMpegWriter(fps=15, metadata=dict(artist='Acoular'), bitrate=1800)\n",
     "    HTML(ani.to_jshtml())\n",
-    "    ani.save(\"./vid/moving_focus.mp4\", writer=writer)\n",
+    "    ani.save(save_path / \"moving_focus.mp4\", writer=writer)\n",
     "    \n",
     "def plot_maps(res, gird, block_size, sfreq):\n",
     "    nsize = int(np.ceil((np.sqrt(len(res)))))\n",
