--- a/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
+++ b/03_Beamforming_in_the_time_domain_with_moving_sources.ipynb
@@ -116,7 +116,7 @@
     "    ax.set_title(f't = {ttime:.2f}s')\n",
     "    return state['scatter_plots'] + [state['grid_wire']]\n",
     "\n",
-    "def generate_synth_data(sfreq, num_samples, lx, lz):\n",
+    "def generate_synth_data(micgeom, sfreq, num_samples, lx, lz):\n",
     "    nseed = 1\n",
     "    convamp = True \n",
     "    # Initialize 4 different WNoiseGenerator objects. \n",
@@ -257,7 +257,7 @@
     "- synthetic input data consisting of four white noise monopole acoustic sources moving in front of the array\n",
     "- lz is the distance between the plane in which the sources move and the array plane, and lx is the distance to the starting position on the x-axis\n",
     "- sources moving with a velocity v of 60 km/h\n",
-    "- simulated microphone array data with a sample rate of 51200, consisting of the entire pass-by of the sources from -lx to lx"
+    "- simulated microphone array data with a sample rate of 12800, consisting of the entire pass-by of the sources from -lx to lx"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "source": [
     "# trajectory of the origin of the source configuration\n",
     "tr0 = ac.Trajectory(points={0:(-lx,0,lz),t_pass:(lx,0,lz)})\n",
-    "trs, col, source_mixer = generate_synth_data(sfreq, num_samples, lx, lz)"
+    "trs, col, source_mixer = generate_synth_data(micgeom, sfreq, num_samples, lx, lz)"
    ]
   },
   {
@@ -454,7 +454,7 @@
    "id": "436a3f73",
    "metadata": {},
    "source": [
-    "- create processing of chain moving focus Beamforming\n",
+    "- create processing of chain moving focus beamforming\n",
     "- use of `BeamformerTimeSqTraj` in processing chain with set `trajectory`"
    ]
   },
