fix order of authors

--- a/04_An_Interactive_Tutorial_on_Advanced_Microphone_Array_Methods_for_Acoustic_Source_Mapping.ipynb
+++ b/04_An_Interactive_Tutorial_on_Advanced_Microphone_Array_Methods_for_Acoustic_Source_Mapping.ipynb
@@ -268,7 +268,7 @@
     "<img src=\"img/TU-lang.png\" alt=\"TU Logo\" style=\"width:230px; position:absolute; top:0px; right:180px;\">\n",
     "\n",
     "<h1 style=\"margin-top: 180px; margin-bottom: 50px; color: #A81D1E;\">An Interactive Tutorial on Advanced Microphone Array Methods for Acoustic Source Mapping</h1>\n",
-    "<h3 style=\"margin-top: 50px; margin-bottom: 50px; color: #434343;\">Adam Kujawski, Art J. R. Pelling, Mikolaj Czuchaj, Gert Herold, Oliver Lylloff, Ennes Sarradj</h3>\n",
+    "<h3 style=\"margin-top: 50px; margin-bottom: 50px; color: #434343;\">Adam Kujawski, Mikolaj Czuchaj, Gert Herold, Oliver Lylloff, Art J. R. Pelling, Ennes Sarradj</h3>\n",
     "\n",
     "<h5 style=\"margin-top: 50px; margin-bottom: 100px; color: #434343;\">Jupyter Notebook available at <a href=\"https://github.com/acoular/workshop_DAS-DAGA-2025\">https://github.com/acoular/workshop_DAS-DAGA-2025</a></h5>\n"
    ]
