add download to data

--- a/05_Modelling_flow_environments_for_the_correction_of_aeroacoustic_microphone_array_measurements.ipynb
+++ b/05_Modelling_flow_environments_for_the_correction_of_aeroacoustic_microphone_array_measurements.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,17 +145,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the data from [data.dtu.dk](https://doi.org/10.11583/DTU.c.7222614) and save in this directory.   \n",
+    "Get the data from [data.dtu.dk](https://doi.org/10.11583/DTU.c.7222614) and save in this directory.\n",
     "The data format follows the AIAA HDF5 definition. Utilities for loading this data format is included in Acoular:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
+    "url = 'https://data.dtu.dk/ndownloader/files/46174503'\n",
     "csm_file = 'DTU_PLCT_NACA63018_trip_5PS_5SS_U0_50_AoA_0_octave12_CsmEss.h5'\n",
+    "response = requests.get(url)\n",
+    "if response.status_code == 200:\n",
+    "    with open(csm_file, \"wb\") as file:\n",
+    "        file.write(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mg = MicAIAABenchmark(file=csm_file) # microphone geometry\n",
     "csm = CsmAIAABenchmark(file=csm_file) # cross-spectral matrix"
    ]
@@ -413,7 +427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "daga-workshop",
    "language": "python",
    "name": "python3"
   },
